--- a/notebooks/descriptive_statistics.ipynb
+++ b/notebooks/descriptive_statistics.ipynb
@@ -13,12 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'headline', 'url', 'publisher', 'date', 'stock'], dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load your dataset\n",
-    "df = pd.read_csv('../Data/raw_analyst_ratings.csv')\n"
+    "df = pd.read_csv('../Data/raw_analyst_ratings.csv')\n",
+    "df.columns\n"
    ]
   },
   {
